commit with full crud

--- a/projectFocusapi/fixtures/project_notes.json
+++ b/projectFocusapi/fixtures/project_notes.json
@@ -1,10 +1,8 @@
 [
     {
-        "model": "projectFocusapi.note",
+        "model": "projectFocusapi.projectnote",
         "pk": 1,
         "fields": {
-            "super": 1,
-            "lotId": 1,
             "projectId": 1,
             "name": "This lost is poppin",
             "date": "2021-10-08",
@@ -14,11 +12,9 @@
         }
     },
     {
-        "model": "projectFocusapi.note",
+        "model": "projectFocusapi.projectnote",
         "pk": 2,
         "fields": {
-            "super": 1,
-            "lotId": 1,
             "projectId": 1,
             "name": "this lot not poppin",
             "date": "2021-10-08",
